fix contrasto pagine amministrazione; fix h1 in modera recensioni

--- a/flyweb/css/style.css
+++ b/flyweb/css/style.css
@@ -598,7 +598,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .form-search{
     background-color: #0a3150;
-    color:#fff;
+    color:#000;
     margin: 0 auto;
     width: 90%;
     border-radius: 30px;
@@ -1506,21 +1506,21 @@ input[type=number]::-webkit-outer-spin-button {
     vertical-align: middle;
 }
 
-/* === Page selector ===*/
+/* === PAGE SELECTOR ===*/
 .button-selector-page{
     font-size: larger;
     font-weight: 700;
     width: 2em;
     height: 2em;
     border: 2px solid #FF8C00;
-    color: #FF8C00;
+    color: #FFD394;
     border-radius: 5px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     margin: 0.2em;
     vertical-align: middle;
     text-align: center;
+    background-color: #0a3150;
 }
-
 
 .button-selector-page:disabled{
     opacity: 0.6;
